--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
       what I have learnt so far.
     </p>
     <p>click the button below to get started</p>
-    <button>
-      <div class="intro_btn">
-        <span class="intro_btn_child">x</span>
-        <span class="intro_btn_child">÷</span>
-      </div>
-      <span class="equal">=</span>
-    </button>
+    <a href="calculator.html">
+      <button>
+        <div class="intro_btn">
+          <span class="intro_btn_child">x</span>
+          <span class="intro_btn_child">÷</span>
+        </div>
+        <span class="equal">=</span>
+      </button>
+    </a>
   </body>
 </html>
