--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       what I have learnt so far.
     </p>
     <p>click the button below to get started</p>
-    <a href="calculator.html">
+    <a href="calculator.html" style="text-decoration: none">
       <button>
         <div class="intro_btn">
           <span class="intro_btn_child">x</span>
