--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>Welcome to my Calculator App</h1>
     <p>
       This is a part of my first semester assessment and I'm excited to show you
-      what I have learnt so far.
+      what I have learnt so far. It has been a combination of HTML, CSS and
+      JavaScript, and its been amazing so far. Thank you for being here.
     </p>
     <p>click the button below to get started</p>
     <a href="calculator.html" style="text-decoration: none">
